fix navigation off-by-one bug, and vertical alignment

--- a/src/carousel/css/objects/_honeycomb.carousel.objects.scss
+++ b/src/carousel/css/objects/_honeycomb.carousel.objects.scss
@@ -1,9 +1,11 @@
 .slick-prev,
 .slick-next {
     z-index: 1;
-    width: auto;
     position: relative;
     display: inline-block;
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
 
     &:before {
         content: "";
@@ -11,7 +13,7 @@
         height: 20px;
         display: inline-block;
         transform: rotate(45deg);
-        border: 3px solid red;
+        border: 3px solid color('red', 4);
         border-radius: 1px;
     }
 }
@@ -32,6 +34,10 @@
         border-bottom: transparent;
         border-left: transparent;
     }
+}
+
+.slick-dots li {
+    vertical-align: middle;
 }
 
 .slick-dots li.slick-active button::before {
